DevOps/K8s-manifests/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: teta-sheverdov
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: auth
          image: registry.gitlab.com/teta-students/hse_sheverdov/core/auth:1.0.0
          ports:
            - containerPort: 3001
