DevOps/K8s-manifests/chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-deployment
  namespace: teta-sheverdov
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: chat
          image: registry.gitlab.com/teta-students/hse_sheverdov/core/chat:1.0.0
          ports:
            - containerPort: 3002
