DevOps/K8s-manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: teta-sheverdov # comment TODO delete
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: frontend
          image: registry.gitlab.com/teta-students/hse_sheverdov/core/frontend:1.0.0
          ports:
            - containerPort: 3000
