DevOps/K8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gigachat-ingress
  namespace: teta-sheverdov
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: gigachat.site
      http:
        paths:
          - path: /auth/
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 3001
          - path: /chat/
            pathType: Prefix
            backend:
              service:
                name: chat
                port:
                  number: 3002
          - path: /frontend/
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
